<resources>
    <string name="app_name"/>
    <string name="name">Name: </string>
    <string name="age">Age: </string>
    <string name="address">Address: </string>
    <string name="title">Personal Information </string>
    <string name="enter_password">Password: </string>
    <string name="edit_info">Change info</string>
    <string name="restock">Restock Inventory</string>
    <string name="add_new_user">Add New User</string>
    <string name="save_changes">Save Changes</string>
    <string name="create_account">Create Account</string>
    <string name="user">Customer</string>
    <string name="employee">Employee</string>
    <string name="quantity">Quantity: </string>
    <string name="UserLogInText">LOGIN</string>
    <string name="log_in">Log in</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="PromptRole">I am a(n)</string>
    <string name="admin">Admin</string>
    <string name="title_activity_usermain2">Usermain2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="myCart">My Cart</string>
    <string name="myShoppingCart">My Shopping Cart</string>
    <string name="ViewProfile">View Profile</string>
    <string name="add">add</string>
    <string name="todo">TODO</string>
    <string name="item">Item</string>
    <string name="totalPrice">Total Price</string>
    <string name="item1">item1</string>
    <string name="addQuantity">+</string>
    <string name="removeQuantity">-</string>
    <string name="viewUserProfile">View User Profile</string>
    <string name="changeUserProfile">Change User Profile</string>
    <string name="edit">Edit</string>

    <string name="welcome">Welcome to Your New Store!</string>
    <string name="new_info">Edit User Information </string>
    <string name="get_started">Lets get started!</string>
    <string name="create_employee">New Employee Information</string>
    <string name="create_employee_button">Create Employee</string>

    <string name="congradulations">Congratulations!</string>
    <string name="ready">You are ready to use your new store!</string>
    <string name="info_admin_id">Your admin ID is: </string>
    <string name="admin_id"/>
    <string name="info_employee_id">Your employees ID is: </string>
    <string name="employee_id"/>
    <string name="next">Next</string>

    <string name="creatANewAccount">Create a New Account</string>
    <string name="promoteEmployees">Promote Employee(s)</string>
    <string name="viewBook">View Book</string>
    <string name="promote">promote</string>
    <string name="back">TODO</string>
    <string name="viewbook">Viewbook</string>
    <string name="userTypeText">Select User Type</string>
    <string name="userInfoPrompt">Please Enter User\'s Information</string>
    <string name="welcomeToStore">Welcome to Our Store!</string>
    <string name="set_up_complete">Set Up Complete</string>
    <string name="setting_up">Setting up the store</string>
    <string name="finish_set_up">Proceed to Login</string>
    <string name="promote_employees">Promote Employees</string>

    <string name="restockTitle">Restock Inventory</string>
    <string name="restockTutorial">Quantity to Add to Current Quantity</string>
    <string name="searchInventory">Search for Inventory</string>
    <string name="searchButton">Search</string>
    <string name="checkout">Check Out Items</string>
    <string name="promotion">Promote Employee</string>
    <string name="employeeSearch">Search for Employee</string>
    <string name="userStoreTitle">Welcome to our Store!</string>
    <string name="itemName">ITEM NAME --------------</string>
    <string name="itemPrice">PRICE OF ITEM HERE</string>
    <string name="defaultViewBook">ViewBook Historical Sales Log \n\n\n\nThis text should be replaced by the ViewBook method regardless whether it is empty of not. \n\n If this text still remains, something went wrong :p \n\n Spam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \nvSpam to test scrollbar \nSpam to test scrollbar \nSpam to test scrollbar \n</string>

    <string name="newWord">New </string>
    <string name="accountTypes">Customer or Employee</string>
    <string name="successCreation">Successfully Created</string>
    <string name="ok">OK</string>

    <string name="new_account_created">New Account Created</string>
</resources>
