<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/subBackground">

    <TextView
        android:id="@+id/newWord"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/newWord"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="30sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/userType"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/accountTypes"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="30sp"
        android:layout_marginTop="110dp"/>

    <!-- new customer or employee-->
    <TextView
        android:id="@+id/successCreation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/successCreation"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="30sp"
        android:layout_marginTop="180dp"/>

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@color/button"
        app:layout_constraintStart_toEndOf="@string/successCreation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        />

</android.support.constraint.ConstraintLayout>